update figures with new data

--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -26,7 +26,7 @@
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'rachel', 'ayush', 'vinayak', 'vishnesh'}\n",
+      "INFO:Found users: {'ayush', 'vinayak', 'rachel', 'vishnesh'}\n",
       "\n"
      ]
     },
@@ -34,21 +34,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "180: simpeval-22/GPT-3-few-shot\n",
+      "180: simpeval-22/Muss\n",
+      "180: simpeval-22/GPT-3-zero-shot\n",
       "180: simpeval-22/Human-1-written\n",
-      "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/T5-3B\n",
       "180: simpeval-22/Human-2-written\n",
-      "180: simpeval-22/GPT-3-zero-shot\n",
-      "180: simpeval-22/Muss\n",
-      "180: simpeval-22/GPT-3-few-shot\n",
+      "180: simpeval-22/T5-11B\n",
       "\n",
-      "120: simpeval-ext/Human-2-written\n",
-      "120: simpeval-ext/Muss\n",
-      "120: simpeval-ext/GPT-3-zero-shot\n",
-      "120: simpeval-ext/T5-3B\n",
-      "120: simpeval-ext/GPT-3-few-shot\n",
       "120: simpeval-ext/Human-1-written\n",
-      "120: simpeval-ext/T5-11B\n"
+      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/Human-2-written\n",
+      "120: simpeval-ext/T5-3B\n",
+      "120: simpeval-ext/T5-11B\n",
+      "120: simpeval-ext/GPT-3-few-shot\n",
+      "120: simpeval-ext/Muss\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
      "text": [
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'rachel', 'ayush', 'vinayak', 'vishnesh'}\n",
+      "INFO:Found users: {'ayush', 'vinayak', 'rachel', 'vishnesh'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'edit_type': 'deletion',\n",
+       " 'id': 0,\n",
+       " 'information_impact': <Information.LESS: 'Generalization'>,\n",
+       " 'type': <Quality.TRIVIAL: 'Trivial'>,\n",
+       " 'subtype': None,\n",
+       " 'family': <Family.LEXICAL: 'Lexical'>,\n",
+       " 'grammar_error': False,\n",
+       " 'error_type': None,\n",
+       " 'rating': None,\n",
+       " 'size': 0.008310249307479225,\n",
+       " 'token_size': 1,\n",
+       " 'reorder_level': None,\n",
+       " 'original_span': [(92, 95)],\n",
+       " 'simplified_span': None,\n",
+       " 'score': 0.0}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edits[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\textit{13057} & \\textit{628} & \\textit{449} & \\textit{1901} & -- & \\\\\n",
+      "\\textit{55K} & \\textit{4.3K} & \\textit{1.8K} & \\textit{12K} & \\textit{82K} & \\\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get number of tokens\n",
+    "edits = [i for j in [s['processed_annotations'] for s in data] for i in j]\n",
+    "num_error = [e['token_size'] for e in edits if e['error_type'] is not None]\n",
+    "num_complex = [e['token_size'] for e in edits if e['error_type'] == Error.COMPLEX_WORDING]\n",
+    "num_bad_del = [e['token_size'] for e in edits if e['error_type'] == Error.BAD_DELETION]\n",
+    "num_quality = [e['token_size'] for e in edits if e['error_type'] is None] # e['type'] == Quality.QUALITY\n",
+    "num_same_tok = sum([len(s['original'].split(' ') + s['simplified'].split(' ')) for s in data]) - sum([e['token_size'] for e in edits])\n",
+    "\n",
+    "print(\"\\\\textit{\" + str(len(num_quality)) + \"} & \\\\textit{\" + str(len(num_bad_del)) + \"} & \\\\textit{\" + str(len(num_complex)) + \"} & \\\\textit{\" + str(len(num_error)) + \"} & -- & \\\\\\\\\")\n",
+    "print(\"\\\\textit{\" + str(int(sum(num_quality)/1000)) + \"K} & \\\\textit{\" + str(round(sum(num_bad_del)/1000, 1)) + \"K} & \\\\textit{\" + str(round(sum(num_complex)/1000, 1)) + \"K} & \\\\textit{\" + str(round(sum(num_error)/1000)) + \"K} & \\\\textit{\" + str(round(num_same_tok/1000)) + \"K} & \\\\\\\\\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67914"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
