--- a/analysis/edit-type-graph.ipynb
+++ b/analysis/edit-type-graph.ipynb
@@ -2,15 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found users: {'vinayak', 'rachel', 'anton', 'vishnesh', 'ayush', 'kelly'}\n",
-      "\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: '../annotated'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mall\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[39m# There's also 'tutorial' and 'preliminary' data\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m data \u001b[39m=\u001b[39m load_data(\u001b[39m'\u001b[39;49m\u001b[39m../annotated\u001b[39;49m\u001b[39m'\u001b[39;49m, batch_num\u001b[39m=\u001b[39;49m[\u001b[39m5\u001b[39;49m, \u001b[39m6\u001b[39;49m, \u001b[39m7\u001b[39;49m, \u001b[39m8\u001b[39;49m, \u001b[39m9\u001b[39;49m, \u001b[39m10\u001b[39;49m, \u001b[39m11\u001b[39;49m], preprocess\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m      5\u001b[0m systems \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m([x[\u001b[39m'\u001b[39m\u001b[39msystem\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m data])\n\u001b[0;32m      6\u001b[0m edit_types \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(data[\u001b[39m0\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mannotations\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mkeys())\n",
+      "File \u001b[1;32mc:\\Users\\heine\\Documents\\research\\ts-annotation-tool\\analysis\\utils\\dataloader.py:558\u001b[0m, in \u001b[0;36mload_data\u001b[1;34m(path, batch_num, preprocess, realign_ids, adjudicated, spans_only)\u001b[0m\n\u001b[0;32m    556\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mannotated\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m path:\n\u001b[0;32m    557\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mCurrently only supports format of \u001b[39m\u001b[39m\\\"\u001b[39;00m\u001b[39mannotated\u001b[39m\u001b[39m\\\"\u001b[39;00m\u001b[39m files.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m--> 558\u001b[0m files \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m([\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mlistdir(path)])\n\u001b[0;32m    560\u001b[0m \u001b[39m# Only include files of a specified batches\u001b[39;00m\n\u001b[0;32m    561\u001b[0m \u001b[39mif\u001b[39;00m (batch_num \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m):\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: '../annotated'"
      ]
     }
    ],
@@ -472,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
