--- a/edit_classification/prepare_data.ipynb
+++ b/edit_classification/prepare_data.ipynb
@@ -25,41 +25,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
+      "INFO:Loading files: ['../data/test_set_inspection_rating_annotated/batch_1_ayush.json', '../data/test_set_inspection_rating_annotated/batch_1_rachel.json', '../data/test_set_inspection_rating_annotated/batch_1_vinayak.json', '../data/test_set_inspection_rating_annotated/batch_1_vishnesh.json', '../data/test_set_inspection_rating_annotated/batch_2_ayush.json', '../data/test_set_inspection_rating_annotated/batch_2_rachel.json', '../data/test_set_inspection_rating_annotated/batch_2_vinayak.json', '../data/test_set_inspection_rating_annotated/batch_2_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'ayush', 'vishnesh', 'vinayak', 'rachel'}\n",
+      "INFO:Found users: {'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
       "\n",
-      "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 1, HIT 52 (ID 573) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 1, HIT 97 (ID 708) has 7 substitution edits but 6 annotations. Likely a missing annotation.\n",
-      "WARNING:vinayak - Batch 2, HIT 307 (ID 920) has 2 substitution edits but 1 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 2, HIT 311 (ID 931) has 4 substitution edits but 3 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 2, HIT 321 (ID 961) has 9 substitution edits but 8 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 2, HIT 373 (ID 1117) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 3 deletion edits but 2 annotations. Likely a missing annotation.\n",
-      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 5 structure edits but 4 annotations. Likely a missing annotation.\n",
-      "WARNING:ayush - Batch 3, HIT 573 (ID 1455) has 3 reorder edits but 2 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 579 (ID 1474) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 587 (ID 1498) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 605 (ID 1552) has 5 substitution edits but 4 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 426 (ID 1635) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 475 (ID 1782) has 2 structure edits but 1 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 479 (ID 1794) has 2 deletion edits but 1 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 673 (ID 2017) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 675 (ID 2023) has 3 substitution edits but 2 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 679 (ID 2035) has 4 substitution edits but 3 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 2 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 4 substitution edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 3 reorder edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 692 (ID 2074) has 5 deletion edits but 4 annotations. Likely a missing annotation.\n"
+      "WARNING:rachel - Batch 1, HIT 77 (ID 121) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 1, HIT 11 (ID 195) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 1, HIT 11 (ID 195) has 3 substitution edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 1, HIT 11 (ID 195) has 2 split edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 1, HIT 11 (ID 195) has 1 reorder edits but 0 annotations. Likely a missing annotation.\n"
      ]
     }
    ],
    "source": [
-    "data = load_data('../data/inspection_rating_annotated', preprocess=True)"
+    "data = load_data('../data/test_set_inspection_rating_annotated', preprocess=True)"
    ]
   },
   {
@@ -95,16 +74,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deletion ['bad', '', 'no', '']\n",
-      "structure ['changes tense', 'positive', '', '', 'no']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert all edit annotation (a list of words) to a format of [error/quality/trivial, severity or efficacy, grammar error or not]\n",
     "# Update April 18, add error category to the 4th element of the annotation\n",
@@ -267,7 +237,7 @@
     "converted_data_dict = {\"%%\".join(map(str, key)): value for key, value in data_dict.items()}\n",
     "\n",
     "# Save the data into a json file\n",
-    "with open(\"../data/edit_classification/inspection_data/batch_1234.json\", \"w\") as f:\n",
+    "with open(\"../data/edit_classification/inspection_data/test_set.json\", \"w\") as f:\n",
     "    json.dump(converted_data_dict, f, indent=4)"
    ]
   }
